Fix hero margin on mobile

--- a/style.css
+++ b/style.css
@@ -252,6 +252,10 @@ footer {
     font-size: 32px;
   }
 
+  .hero {
+    margin: 75px 0;
+  }
+
   .header-container {
     justify-content: center;
   }
